--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LocNes</title>
+  <title>LocNess</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Oswald');
+
+    *{
+      margin: 0px;
+      padding: 0px;
+      font-family: 'Oswald', sans-serif;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
